--- a/.github/workflows/twrp-build.yml
+++ b/.github/workflows/twrp-build.yml
@@ -1,1 +1,121 @@
+name: Build TWRP for M12
 
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  MANIFEST_BRANCH: twrp-8.1
+  DEVICE_CODENAME: sl8541e_1h10
+  DEVICE_MANUFACTURER: m12
+
+jobs:
+  build:
+    runs-on: ubuntu-20.04
+    
+    steps:
+    - name: Checkout device tree
+      uses: actions/checkout@v4
+      with:
+        path: device_tree
+        
+    - name: Initialize TWRP repository
+      run: |
+        mkdir -p twrp
+        cd twrp
+        repo init -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b $MANIFEST_BRANCH --depth=1
+        repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
+
+    - name: Copy device tree to TWRP source
+      run: |
+        mkdir -p twrp/device/$DEVICE_MANUFACTURER
+        cp -r device_tree/* twrp/device/$DEVICE_MANUFACTURER/$DEVICE_CODENAME/
+
+    - name: Setup build environment
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openjdk-8-jdk git-core gnupg flex bison gperf build-essential \
+          zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 \
+          lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev \
+          libxml2-utils xsltproc unzip fontconfig ccache
+
+    - name: Setup ccache
+      run: |
+        echo "export USE_CCACHE=1" >> $GITHUB_ENV
+        echo "export CCACHE_EXEC=/usr/bin/ccache" >> $GITHUB_ENV
+        echo "export CCACHE_DIR=$HOME/.ccache" >> $GITHUB_ENV
+        ccache -M 20G
+
+    - name: Source environment and build
+      run: |
+        cd twrp
+        source build/envsetup.sh
+        lunch omni_$DEVICE_CODENAME-eng
+        
+        # 检查设备树配置
+        if [ ! -f "device/$DEVICE_MANUFACTURER/$DEVICE_CODENAME/BoardConfig.mk" ]; then
+          echo "错误: BoardConfig.mk 不存在!"
+          exit 1
+        fi
+        
+        # 构建 recovery
+        make -j$(nproc --all) recoveryimage
+
+    - name: Check build output
+      run: |
+        cd twrp/out/target/product/$DEVICE_CODENAME
+        if [ -f "recovery.img" ]; then
+          echo "✅ Recovery 镜像构建成功"
+          ls -la recovery.img
+        else
+          echo "❌ Recovery 镜像构建失败"
+          ls -la
+          exit 1
+        fi
+
+    - name: Create flashable zip
+      run: |
+        cd twrp/out/target/product/$DEVICE_CODENAME
+        # 创建基本的刷机包结构
+        mkdir -p META-INF/com/google/android
+        cat > META-INF/com/google/android/updater-script << 'EOF'
+ui_print("Flashing TWRP Recovery...");
+show_progress(0.500000, 0);
+package_extract_file("recovery.img", "/dev/block/bootdevice/by-name/recovery");
+show_progress(0.100000, 0);
+ui_print("Done!");
+EOF
+        
+        # 创建 update-binary
+        cp ../../../../build/tools/releasetools/update-binary META-INF/com/google/android/
+        
+        # 打包成 zip
+        zip -r TWRP-${DEVICE_CODENAME}-$(date +%Y%m%d)-UNOFFICIAL.zip recovery.img META-INF/
+        echo "刷机包创建完成"
+
+    - name: Upload recovery image
+      uses: actions/upload-artifact@v4
+      with:
+        name: TWRP-recovery-image
+        path: twrp/out/target/product/${{ env.DEVICE_CODENAME }}/recovery.img
+        retention-days: 7
+
+    - name: Upload flashable zip
+      uses: actions/upload-artifact@v4
+      with:
+        name: TWRP-flashable-zip
+        path: twrp/out/target/product/${{ env.DEVICE_CODENAME }}/TWRP-*-UNOFFICIAL.zip
+        retention-days: 7
+
+    - name: Upload build logs (on failure)
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-logs
+        path: |
+          twrp/out/error.log
+          twrp/out/*.log
+        retention-days: 3
